--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/main-work/web-sites.jpg" alt="web sites" width="360" height="300"></li>
-                <li><img src="./images/main-work/mobile-app.jpg" alt="mobile applications" width="360" height="300"></li>
-                <li><img src="./images/main-work/marketing.jpg" alt="marketing" width="360" height="300"></li>
+                <li><img src="./images/main-web-sites.jpg" alt="web sites" width="360" height="300"></li>
+                <li><img src="./images/main-mobile-app.jpg" alt="mobile applications" width="360" height="300"></li>
+                <li><img src="./images/main-marketing.jpg" alt="marketing" width="360" height="300"></li>
             </ul>
         </section>
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/main-team/mark-guerrero.jpg" alt="portrait of a company employee" width="264" height="260">
+                    <img src="./images/team-mark-guerrero.jpg" alt="portrait of a company employee" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/main-team/tom-ford.jpg" alt="portrait of a company employee" width="264" height="260">
+                    <img src="./images/team-tom-ford.jpg" alt="portrait of a company employee" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/main-team/camila-garcia.jpg" alt="portrait of a company employee" width="264" height="260">
+                    <img src="./images/team-camila-garcia.jpg" alt="portrait of a company employee" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/main-team/daniel-wilson.jpg" alt="portrait of a company employee" width="264" height="260">
+                    <img src="./images/team-daniel-wilson.jpg" alt="portrait of a company employee" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
